--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,17 @@
-spring.datasource.url=jdbc:h2:mem:runtimedb
-# spring.datasource.url=jdbc:h2:file:data.db
+# datasource
+spring.datasource.url=jdbc:h2:file:/Users/mihai/data.db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+
+# jpa
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+# h2 console
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=false
+
+# app parameters
 app.name=KBN
