--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,12 @@ spring.datasource.password=password
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# debug
+spring.jpa.properties.hibernate.show_sql=true
+# spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+# logging.level.org.hibernate.SQL=debug
+# logging.level.org.hibernate.type.descriptor.sql=trace
 
 # h2 console
 spring.h2.console.path=/h2-console
