--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # datasource
-spring.datasource.url=jdbc:h2:file:/Users/mihai/data.db
+spring.datasource.url=jdbc:h2:file:~/data.db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
