--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.mihaicraicun.kbn</groupId>
+	<groupId>com.mihaicraciun.kbn</groupId>
 	<artifactId>kbn</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>kbn</name>
