--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 # datasource
-spring.datasource.url=jdbc:h2:file:~/data.db
+spring.datasource.url=jdbc:h2:file:./db/data.db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 
+# db
 # jpa
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
@@ -16,8 +17,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # logging.level.org.hibernate.SQL=debug
 # logging.level.org.hibernate.type.descriptor.sql=trace
 # h2 console
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.web-allow-others=false
+# spring.h2.console.path=/h2-console
+# spring.h2.console.settings.web-allow-others=false
 
 # app parameters
 app.name=KBN
