--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,3 @@
-# datasource
-spring.datasource.url=jdbc:h2:file:./db/data.db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-
-# db
-# jpa
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-# debug
-# spring.jpa.properties.hibernate.show_sql=true
-# spring.jpa.properties.hibernate.use_sql_comments=true
-# spring.jpa.properties.hibernate.format_sql=true
-# logging.level.org.hibernate.SQL=debug
-# logging.level.org.hibernate.type.descriptor.sql=trace
-# h2 console
-# spring.h2.console.path=/h2-console
-# spring.h2.console.settings.web-allow-others=false
-
 # app parameters
-app.name=KBN
+spring.application.name=KBN
+spring.profiles.active=prod
